2003-10-22  Radek Doulik  <rodo@ximian.com>

	* htmlengine-edit.c (html_engine_new_text): apply text attributes

2003-10-21  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (save_close_attrs): don't free attrs when save fails

	* htmlgdkpainter.c (draw_spell_error): sum width of all glyphs

	* htmltext.c (save_text): test *l to be non NULL

2003-10-20  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (save): reverse copied list
	(save): reverse attrs list here, don't free it in save_close_attrs

2003-10-15  Larry Ewing  <lewing@ximian.com>

	* htmltext.c (html_link_free): null protect this function.
	(save): NULL protect.

2003-10-15  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* htmlobject.c: (handle_object_data):
	Close comment when saving object data, part 2 (bug #38589)

2003-10-14  Radek Doulik  <rodo@ximian.com>

	* htmlobject.c (select_range): select containers

	* htmlinterval.c (select_object): select range in containers

2003-10-13  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* htmlobject.c: (object_save_data):
	Close comment when saving object data (bug #38589).

2003-10-06  Larry Ewing  <lewing@ximian.com>

	* htmlobject.c (html_object_fit_line): remove explicit call to
	calc_size here.

	* htmlengine.c: move more parsers to html_element interface.

	* htmltable.c (html_table_class_init): remove fit_line
	implementation, it isn't needed ans breaks inline tables.

	* htmlgdkpainter.c: fixup close bracket placement.

2003-10-02  Larry Ewing  <lewing@ximian.com>

	* htmltext.c (select_range): reset the pango info for all the
	objects who might be affected by the selection change.

	* htmltextslave.c (draw): all drawing is handled by draw_normal
	since the htmltext passes the selection as pango attributes.

	* htmltext.c (html_text_get_pango_info): add selection drawing here.

2003-09-30  Radek Doulik  <rodo@ximian.com>

	* htmliframe.c (html_iframe_init): as below

	* htmlframe.c (html_frame_init): load content before setting
	parent
