@@ -340,7 +340,9 @@ html_engine_new_text (HTMLEngine *e, const gchar *text, gint len)
 	to = html_text_new_with_len (text, len, e->insertion_font_style, e->insertion_color);
 	if (e->insertion_font_style != GTK_HTML_FONT_STYLE_DEFAULT)
 		html_text_set_style_in_range (HTML_TEXT (to), e->insertion_font_style, e, 0, HTML_TEXT (to)->text_bytes);
-	if (e->insertion_color)
+	if (e->insertion_color &&
+	    ((e->insertion_url == NULL && e->insertion_color != html_colorset_get_color (e->settings->color_set, HTMLTextColor))
+	     || (e->insertion_url && e->insertion_color != html_colorset_get_color (e->settings->color_set, HTMLLinkColor))))
 		html_text_set_color_in_range (HTML_TEXT (to), e->insertion_color, 0, HTML_TEXT (to)->text_bytes);
 	if (e->insertion_url)
 		html_text_add_link (HTML_TEXT (to), e->insertion_url, e->insertion_target, 0, HTML_TEXT (to)->text_len);
